tests/error/comptime/invalid_result_value4.bz
// error: invalid value of type '*i32' returned from compile time execution
// note: a pointer of type '*i32' is not a constant expression
// error: expression must be a constant expression
consteval p = {
	let i = 0;
	&i
};
